# neuronovae

./: .flake8  .gitignore  .isort.cfg  .readthedocs.yaml  README.md  _example.py  mkdocs.yml  pyproject.toml
assets/: dont_panic.ome.tiff
demo/: example.py  example_two.py
docs/: index.md  installation.md  theory.md
docs/api/: cmapping.md  colorize.md  dataset.md  export.md  gui.md  issues.md  loaders.md  rois.md
docs/css/: _mkdocstrings.css  _mkdocstrings2.css  mkdocstrings.css
docs/js/: default-value-highlight.js
docs/source/: conf.py
neuronovae/: __init__.py  cmapping.py  cmaps.py  colorize.py  colors.py  constants.py  dataset.py  errors.py  exceptions.py  export.py  hints.py  images.py  instructions.py  io_tools.py  issues.py  loaders.py  maths.py  rois.py  scratch_estimates.py  scratch_load_cmn.py  scratch_make_feature.py  scratych_.py  transforms.py  validation.py
neuronovae/gui/: __main__.py  gui.py  menu.py
scratch/: r2.py  scratch_implementation.py  w2.py  w3.py  w4.py
scripts/: docs.bat  lint.bat  review.bat
tests/: conftest.py  test_cmapping.py  test_io_tools.py  test_loaders.py
tests/a_test_installation/: test_a_install.py
tests/assets/: dont_panic.mmap  dont_panic.npy  dont_panic.tiff
