[build-system]
requires = ["setuptools", ]
build-backend = "setuptools.build_meta"


#///////////////////////////////////////////////////////////////////////////////////////
#// PROJECT CONFIGURATION (GENERAL)
#///////////////////////////////////////////////////////////////////////////////////////


[project]
name = "neuronovae"
version = "0.0.1"
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.12, <=4.0"
license = {file = "LICENSE"}
keywords = [
    "Neuroscience",
    "Visualization",
    "Science",
    "Plotting",
]
authors = [
  {name = "Darik A. O'Neil"}
]
maintainers = [
    {name = "Darik A. O'Neil"}
]
classifiers = [
    "Programming Language :: Python",
]


#///////////////////////////////////////////////////////////////////////////////////////
#// PACKAGE DEPENDENCIES
#///////////////////////////////////////////////////////////////////////////////////////


dependencies = [
    "av>=16.0.1",
    "matplotlib>=3.10.8",
    "numpy",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.10.1",
    "scipy>=1.15.3",
    "tifffile>=2025.12.20",
    "tqdm>=4.67.1",
]


#///////////////////////////////////////////////////////////////////////////////////////
#// PACKAGE URLS
#///////////////////////////////////////////////////////////////////////////////////////


[project.urls]
documentation = "https://github.com/darikoneil/neuronovae"
repository = "https://github.com/darikoneil/neuronovae"


#///////////////////////////////////////////////////////////////////////////////////////
#// OPTIONAL DEPENDENCIES (INCLUDING TEMPLATE DEPENDENCIES)
#///////////////////////////////////////////////////////////////////////////////////////


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-mock",
    "toml",
    "tomli-w"
]
lint = [
    "flake8",
    "flake8-annotations-complexity",
    "flake8-class-attributes-order",
    "flake8-dunder-all",
    "ruff",
]
cov = [
    "coverage[toml]",
    "coveralls",
    "toml",
    "tomli-w"
]
all = [
    "neuronovae[test]",
    "neuronovae[lint]",
    "neuronovae[cov]",
]


#///////////////////////////////////////////////////////////////////////////////////////
#// BUILD CONFIGURATION (SETUPTOOLS)
#///////////////////////////////////////////////////////////////////////////////////////


[tool.setuptools]
packages = [
    "neuronovae",
]


#///////////////////////////////////////////////////////////////////////////////////////
#// TESTING CONFIGURATION (PYTEST)
#///////////////////////////////////////////////////////////////////////////////////////


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-s",
    "--color=yes",
    "-vv",
    "--diff-width=88",
]
console_output_style = "progress"


#///////////////////////////////////////////////////////////////////////////////////////
#// COVERAGE CONFIGURATION (COVERAGE)
#///////////////////////////////////////////////////////////////////////////////////////


[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = [
    "*/tests/*",
    "*/config.py",
    "*/config-3.py",
]
dynamic_context = "test_function"

[tool.coverage.report]
fail_under = 75
exclude_also = [
    "def __repr__",
    "def __name__",
    "def __del__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except ImportError",
    "@(abc\\.)?abstractmethod",
    "@(abc\\.)?abstractproperty",
    "@(abc\\.)?abstractclassmethod",
    "@(abc\\.)?abstractstaticmethod"
]

[tool.coverage.json]
pretty_print = true

[tool.coverage.html]
show_contexts = true
